kubernetes/api-server-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-server-deployment
  labels:
    app: go-rest-api
spec:
  replicas: 3
  selector:
    matchLabels:
      app: go-rest-api
  template:
    metadata:
      labels:
        app: go-rest-api
    spec:
      containers:
        - name: go-rest-api
          image: pkbhowmick/go-rest-api:latest
          ports:
            - containerPort: 8080
