kubernetes/ExternalService.yaml
apiVersion: v1
kind: Service
metadata:
  name: service-external-name
spec:
  type: ExternalName
  externalName: api.github.local
