kubernetes/LoadBalancer.yaml
apiVersion: v1
kind: Service
metadata:
  name: service-loadbalancer
spec:
  type: LoadBalancer
  selector:
    app: go-rest-api
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
status:
  loadBalancer:
    ingress:
    - ip: 127.0.0.1
