kubernetes/api-server-headless.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-server-headless
spec:
  clusterIP: None
  selector:
    app: go-rest-api
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 8080
