kubernetes/clusterIPService.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-server-service
spec:
  selector:
      app: go-rest-api
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
