kubernetes/defaultBackend.yaml
apiVersion: v1
kind: Service
metadata:
  name: default-http-backend
spec:
  selector:
    app: go-rest-api
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
