kubernetes/endpoint-kind.yaml
apiVersion: v1
kind: Endpoints
metadata:
  name: service-without-selector
subsets:
  - addresses:
      - ip: 10.244.0.18
    ports:
      - port: 8080
