kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-server-service
spec:
  type: NodePort
  selector:
    app: go-rest-api
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
      nodePort: 30000
