kubernetes/service2.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-server-service2
spec:
  selector:
    app: go-rest-api
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
