kubernetes/serviceWithoutSelector.yaml
apiVersion: v1
kind: Service
metadata:
  name: service-without-selector
spec:
  type: NodePort
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 8080
    nodePort: 30001
