kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api-server-ingress
spec:
  rules:
  - host: api.github.local
    http:
     paths:
     - path: /
       pathType: Prefix
       backend:
         service:
           name: api-server-service
           port:
             number: 8080
