kubernetes/ingressFanout.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-fanout
spec:
  defaultBackend:
    service:
      name: default-http-backend
      port:
        number: 8080
  rules:
  - host: api.github.local
    http:
      paths:
      - path: /api/users/1
        pathType: Exact
        backend:
          service:
            name: api-server-service
            port:
              number: 8080
      - path: /api/users/2
        pathType: Exact
        backend:
          service:
            name: api-server-service2
            port:
              number: 8080
