kubernetes/ingressVirtualHostWithNoThirdHost.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-virtual-host
spec:
  rules:
    - host: api.github.local
      http:
        paths:
          - path: "/"
            pathType: Prefix
            backend:
              service:
                name: api-server-service
                port:
                  number: 8080
    - host: apitest.github.local
      http:
        paths:
          - path: "/"
            pathType: Prefix
            backend:
              service:
                name: api-server-service2
                port:
                  number: 8080
    - http:
        paths:
        - path: "/"
          pathType: Prefix
          backend:
            service:
              name: default-http-backend
              port:
                number: 8080
